SERVER-113667 Skip RangeDeleter invalidation when the UUID of the CSR mismatch the UUID of the RangeDeletionTask (#44322)

Co-authored-by: Silvia Surroca <silvia.surroca@mongodb.com>
GitOrigin-RevId: 2323fa07847cb34e6735a75238ec60336eb871cf