src/mongo/db/shard_role/shard_role_test.cpp
@@ -3094,7 +3094,9 @@ void ShardRoleTest::testRestoreFailsWhenMetadataInvalidated(
     {
         const auto& csr = CollectionShardingRuntime::acquireExclusive(operationContext(), nss);
         csr->invalidateRangePreserversOlderThanShardVersion(
-            operationContext(), shardVersionShardedCollection1.placementVersion());
+            operationContext(),
+            shardVersionShardedCollection1.placementVersion(),
+            getCollectionUUID(operationContext(), nss));
     }
 
     if (mustFail) {
